--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.3"
   }
 }
